fix contrast footer

--- a/styles/base.css
+++ b/styles/base.css
@@ -70,5 +70,6 @@ section ul {
 footer {
     background-color: #333333; 
     text-align: center;
+    color: #ffffff;
     padding: 20px;
 }
